src/snapshots/cornercase__ui__tests__dialogs__renders_a_confirmation.snap
---
source: src/ui.rs
expression: "render(&with(Overlay::Confirm(confirm))).backend()"
---
"  ⌕ search projects, workspaces, tabs                    │                                          "
"                                                         │                                          "
" projects                      │ workspaces              │                                          "
"                               │                         │                                          "
"▌ cornercase (1)  ╭─ remove workspace ───────────────────────────────────────────╮                  "
"                  │ Remove the workspace login and delete its worktree folder    │                  "
"  + new project   │ ~/wt/login? The branch is kept.                              │                  "
"                  │                                                              │                  "
"                  │                                                              │                  "
"                  │ contains modified or untracked files, use --force to delete  │                  "
"                  │ it                                                           │                  "
"                  │                                                              │                  "
"                  │                                      remove anyway   cancel  │                  "
"                  ╰──────────────────────────────────────────────────────────────╯                  "
" ───────────────────────────── │                         │                                          "
"  settings                     │                         │                                          "
"  usage                        │                         │                                          "
"  quit                         │                         │                                          "
