src/snapshots/cornercase__ui__tests__dialogs__renders_one_section_per_agent.snap
---
source: src/ui.rs
expression: "render_sized(&with(Overlay::Usage(usage)), W, TALL).backend()"
---
"  ⌕ search projects, workspaces, tabs                    │                                          "
"                                                         │                                          "
" projects                      │ workspaces              │                                          "
"                               │                         │                                          "
"▌ cornercase (1)               │                         │                                          "
"                  ╭─ usage ──────────────────────────────────────────────────────╮                  "
"  + new project   │ Claude Code · max plan                        updated 2m ago │                  "
"                  │                                                              │                  "
"                  │ session (5h)                           7% · resets in 2h 13m │                  "
"                  │ ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ │                  "
"                  │                                                              │                  "
"                  │ week                                   82% · resets in 3d 4h │                  "
"                  │ ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ │                  "
"                  │                                                              │                  "
"                  │ week · Fable                                            100% │                  "
"                  │ ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ │                  "
"                  │                                                              │                  "
"                  │ extra usage: 12.34 USD of 50.00 USD                          │                  "
"                  │                                                              │                  "
"                  │ Codex · plus plan                           updated just now │                  "
"                  │                                                              │                  "
"                  │ session (5h)                          53% · resets in 4h 59m │                  "
"                  │ ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ │                  "
"                  │                                                              │                  "
"                  │ week                                   8% · resets in 5d 22h │                  "
"                  │ ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ │                  "
"                  │                                                              │                  "
"                  │                                                        done  │                  "
"                  ╰──────────────────────────────────────────────────────────────╯                  "
"                               │                         │                                          "
" ───────────────────────────── │                         │                                          "
"  settings                     │                         │                                          "
"  usage                        │                         │                                          "
"  quit                         │                         │                                          "
