src/snapshots/cornercase__ui__tests__dialogs__renders_the_usage_windows.snap
---
source: src/ui.rs
assertion_line: 6672
expression: "render(&with(Overlay::Usage(usage()))).backend()"
---
"  ⌕ search projects, workspaces, tabs                    │                                          "
"                  ╭─ Usage ──────────────────────────────────────────────────────╮                  "
" Projects         │ Claude Code · max plan                        updated 2m ago │                  "
"                  │                                                              │                  "
"▌ cornercase (1)  │ session (5h)                           7% · resets in 2h 13m │                  "
"                  │ ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ │                  "
"  + New           │                                                              │                  "
"                  │ week                                   82% · resets in 3d 4h │                  "
"                  │ ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ │                  "
"                  │                                                              │                  "
"                  │ week · Fable                                            100% │                  "
"                  │ ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ │                  "
"                  │                                                              │                  "
"                  │ extra usage: 12.34 USD of 50.00 USD                          │                  "
" ─────────────────│                                                              │                  "
"  Settings        │                                                        done  │                  "
"  Usage           ╰──────────────────────────────────────────────────────────────╯                  "
"  Quit                         │                         │                                          "
