src/snapshots/cornercase__ui__tests__dialogs__renders_the_worktree_toggle.snap
---
source: src/ui.rs
expression: "render(&with(Overlay::Form(new_workspace_form(true)))).backend()"
---
"  ⌕ search projects, workspaces, tabs                    │                                          "
"                                                         │                                          "
" projects                      │ workspaces              │                                          "
"                               │                         │                                          "
"▌ cornercase (1)  ╭─ new workspace ──────────────────────────────────────────────╮                  "
"                  │ name                                                         │                  "
"  + new project   │ › feat/login                                                 │                  "
"                  │ in ~/.cornercase/worktrees/cornercase/feat-login             │                  "
"                  │ [x] with its own worktree                                    │                  "
"                  │                                                              │                  "
"                  │                                                              │                  "
"                  │                                                              │                  "
"                  │                                             create   cancel  │                  "
"                  ╰──────────────────────────────────────────────────────────────╯                  "
" ───────────────────────────── │                         │                                          "
"  settings                     │                         │                                          "
"  usage                        │                         │                                          "
"  quit                         │                         │                                          "
