src/snapshots/cornercase__ui__tests__dialogs__renders_usage_while_loading_and_after_a_failure.snap
---
source: src/ui.rs
assertion_line: 4814
expression: "render(&with(Overlay::Usage(usage))).backend()"
---
"  ⌕ search projects, workspaces, tabs                    │                                          "
"                                                         │                                          "
" projects                      │ workspaces              │                                          "
"                               │                         │                                          "
"▌ cornercase (1)  ┌ usage ───────────────────────────────────────────────────────┐                  "
"                  │ Claude Code · max plan                              loading… │                  "
"  + new project   │                                                              │                  "
"                  │ Codex                                                        │                  "
"                  │                                                              │                  "
"                  │ usage unavailable: could not run /opt/codex/bin/codex: No    │                  "
"                  │ such file or directory (os error 2)                          │                  "
"                  │                                                              │                  "
"                  │                                                        done  │                  "
"                  └──────────────────────────────────────────────────────────────┘                  "
" ───────────────────────────── │                         │                                          "
"  settings                     │                         │                                          "
"  usage                        │                         │                                          "
"  quit                         │                         │                                          "
